--- a/_posts/2013-03-24-Git-Build.textile
+++ b/_posts/2013-03-24-Git-Build.textile
@@ -8,7 +8,7 @@ tags:
 published: true
 ---
 
-_(or the unbreakable build!_
+_(or the unbreakable build!)_
 
 The goal of 'git build' script is to run a command which determine if a commit is good before pushing your commits on the remote.
 It could easily configured to build your project and run the unit tests automaticaly in a private build and then assure you that your git history contains only good commits.
@@ -25,23 +25,33 @@ The different steps of the script are the following :
 h2. Installation
 
 1. Copy the "git-build":https://raw.github.com/pmiossec/git-build/master/git-build script in a directory that is in your path (or add the directory to your path) keeping the file name 'git-build'.
-2. Copy the 2 files !https://raw.github.com/pmiossec/git-build/master/git-build_success.png and !https://raw.github.com/pmiossec/git-build/master/git-build_fail.png in the same directory keeping the names "git-build_success.png" and "git-build_fail.png".
+2. Copy the 2 files !https://raw.github.com/pmiossec/git-build/master/(git-build_success.png)! and !https://raw.github.com/pmiossec/git-build/master/git-build_fail.png(git-build_fail.png)! in the same directory keeping the names "git-build_success.png" and "git-build_fail.png".
 3. If you are under windows, install "Growl":http://www.growlforwindows.com/gfw/ and add growl folder to the path.
 
 h2. Configuration
 
-For each new git repository you use and only one time, set the command that will be run before pushing
+For each new git repository you use and only one time, set the command that will be run before pushing.
 
 Example using maven :
 
-git config private-build.command "mvn clean install"
+bc. git config private-build.command "mvn clean install"
 
 Example using msbuild :
 
-git config private-build.command "msbuild mybuild.build /t:UnitTests /p:Configuration:Debug"
+bc. git config private-build.command "msbuild mybuild.build /t:UnitTests /p:Configuration:Debug"
 
 h2. Use
 
-call 'git build' each time you want to push!
+Each time you want to push, instead, call the command :
+
+bc. git build
+
+h2. Advantages
+
+The advantages of such a solution are :
+- A really easy way to replace Countinuous Integration for projects in early stage or for small teams,
+- A better reppository history because no bad commits ( or no history rework of already pushed commits)
+- Easy build and test on all the branches, not only the master branch
+- Could replace a Countinuous Integration and don't have maintenance costs for the CI anymore.
 
 
