--- a/_posts/2013-03-24-Git-Build.textile
+++ b/_posts/2013-03-24-Git-Build.textile
@@ -17,15 +17,17 @@ h2. Principle
 
 The different steps of the script are the following :
 
-1. clone the current git repository in a temporary folder
-2. run a custom command (build, unit tests,...)
-3. Push commits only if the custom command succeed
+1. Clone the current git repository in a temporary folder
+2. Rebase on upstream modifications
+3. Run a custom command (build, unit tests,...)
+4. Push commits only if the custom command succeed
+5. Give a feedback of the build by a notification
 
 
 h2. Installation
 
 1. Copy the "git-build":https://raw.github.com/pmiossec/git-build/master/git-build script in a directory that is in your path (or add the directory to your path) keeping the file name 'git-build'.
-2. Copy the 2 files !https://raw.github.com/pmiossec/git-build/master/(git-build_success.png)! and !https://raw.github.com/pmiossec/git-build/master/git-build_fail.png(git-build_fail.png)! in the same directory keeping the names "git-build_success.png" and "git-build_fail.png".
+2. Copy the 2 files !https://raw.github.com/pmiossec/git-build/master/git-build_success.png(git-build_success.png)! and !https://raw.github.com/pmiossec/git-build/master/git-build_fail.png(git-build_fail.png)! in the same directory keeping the names "git-build_success.png" and "git-build_fail.png".
 3. If you are under windows, install "Growl":http://www.growlforwindows.com/gfw/ and add growl folder to the path.
 
 h2. Configuration
@@ -38,7 +40,7 @@ bc. git config private-build.command "mvn clean install"
 
 Example using msbuild :
 
-bc. git config private-build.command "msbuild mybuild.build /t:UnitTests /p:Configuration:Debug"
+bc. git config private-build.command "msbuild my.build /t:UnitTests /p:Configuration:Debug"
 
 h2. Use
 
@@ -49,9 +51,10 @@ bc. git build
 h2. Advantages
 
 The advantages of such a solution are :
-- A really easy way to replace Countinuous Integration for projects in early stage or for small teams,
-- A better reppository history because no bad commits ( or no history rework of already pushed commits)
-- Easy build and test on all the branches, not only the master branch
-- Could replace a Countinuous Integration and don't have maintenance costs for the CI anymore.
+
+* A really easy way to replace Countinuous Integration for projects in early stage or for small teams,
+* A better reppository history because no bad commits ( or no history rework of already pushed commits)
+* Easy build and test on all the branches, not only the master branch
+* Could replace a Countinuous Integration and don't have maintenance costs for the CI anymore.
 
 
