--- a/_posts/2013-03-24-Git-Build_Git-tfs.textile
+++ b/_posts/2013-03-24-Git-Build_Git-tfs.textile
@@ -12,11 +12,11 @@ published: true
 
 _(or the unbreakable build even wih TFS...)_
 
-In a "previous post":Git-Build, we saw the 'git build' script to push commits only when the commits satisfy some conditions ( after the run of a custom command).
+In a "previous post":../Git-Build, we saw the 'git build' script to push commits only when the commits satisfy some conditions ( after the run of a custom command).
 
 If you use git-tfs to checkin in a TFS repository, the original script is not useable :(
 
 But you could find "here":https://raw.github.com/pmiossec/git-build/4gittfs/git-build a version of the 'git build' script working with git-tfs.
 
-For other informations, see the original post...
+For other informations, see the "original post":../Git-Build ...
 
